# utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build  build.bat  docker-compose.yml  dockerfile  kernel.sh
src/: .clang-format
src/gentest/: parse.txt  pscmpl.cpp
src/include/async/: async_macro.h  task.h  work.iface  worker.h
src/include/bin_fmt/: numstr.h  token_list.h
src/include/binary/: bit.h  buf.h  compiler_explorer_stub.h  compiler_explorer_stub.txt  contract.h  discard.h  ex_number.h  ex_term.h  expandable_reader.h  expandable_writer.h  flags.h  float.h  int128.h  leb128.h  log2i.h  number.h  op.h  reader.h  signint.h  term.h  view.h  writer.h
src/include/bits/: flags.h
src/include/bnf/: bnf.h  compile.h  matching.h
src/include/cg/: any_object.h  base_object.h  camera.h  light.h  ray.h  rect.h  render.h  shading.h  sphere.h  triangle.h
src/include/cmdline/: cast.h  make_opt.h  optdef.h  option.h  option_result.h  optvalue.h  parse.h  parse_impl.h  samevalue_option.h  somevalue_option.h
src/include/cnet/: cnet.h  http2.h  mem.h  ssl.h  tcp.h
src/include/code/: code_writer.h  line_pos.h  loc_writer.h  src_location.h
src/include/color/: rgb.h  yuv.h
src/include/comb2/: cbtype.h  lexctx.h  pos.h  seqrange.h  status.h
src/include/console/: ansiesc.h  window.h
src/include/core/: buffer.h  byte.h  sequencer.h  strlen.h
src/include/coro/: coro.h  coro_export.h  coro_impl.h  coro_platform.h  ring.h
src/include/deprecated/: waker2.h
src/include/dnet/: address.h  addrinfo.h  boxbytelen.h  byte.h  bytelen.h  bytelen_split.h  closure.h  conn.h  crc.h  debug.h  errcode.h  error.h  ether.h  h2err.h  h2frame.h  h2frame_c.h  h2settings.h  h2state.h  heap.h  html.h  http.h  http2.h  httproundtrip.h  httpstring.h  mem.h  plthead.h  protobuf.h  socket.h  socks.h  storage.h  stun.h  tls.h  tls_head.h  websocket.h  websocket_open.h
src/include/endian/: buf.h  encdec.h  endian.h  float.h  reader.h  view.h  writer.h
src/include/env/: env.h  env_sys.h
src/include/error/: error.h
src/include/escape/: escape.h  read_string.h
src/include/file/: file.h  file_stream.h  file_view.h  huffman.h  platform.h
src/include/fmt/: fmtstring.h
src/include/fnet/: address.h  addrinfo.h  async.h  cmsg.h  connect.h  crc.h  debug.h  error.h  ether.h  heap.h  html.h  http.h  ntp.h  plthead.h  protobuf.h  rtp.h  sock_internal.h  socket.h  socks.h  sockutil.h  storage.h  stun.h  tcp_socket.h  websocket.h  websocket_open.h
src/include/freestd/: assert.h  bit  cassert  compare  concepts  cstddef  cstdint  cstdlib  freestd_macro.h  futils_platform_stddef.h.txt  futils_platform_stdint.h.txt  initializer_list  iterator  limits  memory  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string  string.h  tuple  type_traits  utility
src/include/helper/: append_charsize.h  appender.h  compare_type.h  cond_writer.h  condincr.h  defer.h  defer_ex.h  deref.h  disable_self.h  equal.h  expected.h  expected_op.h  func_arg.hpp  iface_cast.h  indent.h  iterator_base.h  line_pos.h  lock.h  omit_empty.h  pushbacker.h  readutil.h  scoped.h  sfinae.h  space.h  splits.h  string_reader.h  strutil.h  template_instance.h  transform.h  variant.h  view.h
src/include/iface/: base_iface.h  container.h  error_log.h  macros.h  storage.h  undef_macros.h
src/include/io/: bit.h  ex_number.h  ex_term.h  expandable_reader.h  expandable_writer.h  number.h  reader.h  term.h  writer.h
src/include/jit/: jit_memory.h  relocation.h  x64.h  x64_coroutine.h
src/include/json/: constructor.h  convert_json.h  error.h  internal.h  iterator.h  json.h  json_export.h  jsonbase.h  literals.h  ordered_map.h  parse.h  parser.h  path.h  stringer.h  to_json.h  to_string.h
src/include/langc/: c_ast.h  c_lex.h  c_syntax.h  c_x64.h
src/include/low/: low_dllcpp.h  low_dllh.h  stack.h
src/include/math/: derive.h  fft.h  matrix.h  num_seq.h  vector.h
src/include/minilang/: cast.h  langdef.h  minl.h  minlctrl.h  minlfunc.h  minlnode.h  minlprog.h  minlstat.h  minlstruct.h  minlsymbols.h  minltype.h  minlutil.h  minlwrite.h  minnode.h
src/include/net_util/: base64.h  cookie.h  date.h  hpack.h  hpack_huffman.h  hpack_huffman_table.h  ipaddr.h  punycode.h  sha1.h  uri.h  uri_normalize.h  uri_parse.h  urlencode.h
src/include/number/: array.h  bit_size.h  bitmask.h  char_range.h  insert_space.h  number.h  parse.h  prefix.h  radix.h  to_string.h
src/include/operator/: callback.h  utf_convert.h
src/include/parser/: func.h  func.iface  ifaces.h  logical_parser.h  parser_base.h  parser_compiler.h  regex_parser.h  space_parser.h  token.h  token_parser.h
src/include/platform/: detect.h  lazy_dll.h
src/include/quic/: capi.h  context.h  doc.h  quic_doc.h
src/include/reflect/: layout.h  reflect.h
src/include/space/: eol.h  line_pos.h  space.h
src/include/stream/: semantics_stream.h  stream.h  string_stream.h  token_stream.h  tree_stream.h  utf_stream.h
src/include/strutil/: append.h  append_charsize.h  compare_type.h  eol.h  equal.h  format.h  per_line.h  readutil.h  ring_buffer.h  space.h  splits.h  strutil.h
src/include/stub/: first_second_third.h  network.h
src/include/syntax/: attribute.h  element.h  keyword.h  parse.h  parse_impl.h  reader.h
src/include/testutil/: alloc_hook.h  timer.h
src/include/thread/: async.h  channel.h  concurrent_queue.h  fork_channel.h  lite_lock.h  poll.h  priority_ext.h  recursive_lock.h  waker.h
src/include/timer/: clock.h  time.h  timer.h  to_string.h
src/include/tokenize/: cast.h  comment.h  identifier.h  line.h  merge.h  merger.h  predefined.h  reader.h  space.h  token.h  tokenizer.h
src/include/tpm/: tpm.h
src/include/unicode/: conv_method.h  convert.h  minibuffer.h  view.h
src/include/utf/: cast.h  conv_method.h  convert.h  minibuffer.h  view.h
src/include/view/: char.h  charvec.h  concat.h  expand_iovec.h  iovec.h  reverse.h  sized.h  slice.h  span.h  transform.h
src/test/: test_core.cpp  test_endian.cpp  test_fallback.cpp  test_fallback_sequence.cpp  test_utf_operator.cpp  test_utfconvert.cpp  test_utfview.cpp
src/tool/: interface_gen.cpp
(+1688 files in other folders)
